--- a/demo/pom.xml
+++ b/demo/pom.xml
@@ -27,7 +27,7 @@
         <dependency>
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter-engine</artifactId>
-            <version>5.10.0</version>
+            <version>5.7.1</version>
             <scope>test</scope>
         </dependency>
 
@@ -36,6 +36,14 @@
             <groupId>org.junit.platform</groupId>
             <artifactId>junit-platform-launcher</artifactId>
             <version>1.7.1</version> <!-- or the version you are using -->
+            <scope>test</scope>
+        </dependency>
+
+        <!-- JUnit Platform Engine for DiscoverySelectors -->
+        <dependency>
+            <groupId>org.junit.platform</groupId>
+            <artifactId>junit-platform-engine</artifactId>
+            <version>1.7.1</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
